--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,22 @@
+
+1.1.0:
+	- Added glue for interfacing from BeeCrypt Java Cryptography Provider.
+	- Changed blockcipher struct to support interfacing with Java.
+	- Added better blockcipher IV handling.
+	- Multi-pass block processing is now possible with blockEncrypt/blockDecrypt.
+	- Updated config.sub and config.guess to latest version from sources.redhat.com
+	- Changed opening of entropy devices to blocking read-only mode instead of non-blocking read-write.
+	- Added win32 'wincrypt' entropy source.
+	- Added win32 'console' entropy source.
+	- Added FreeBSD support.
+	- Added PowerPC assembler optimized multiprecision subtraction routines.
+	- Added initial ia64 support.
+	- Added initial Darwin support (everything compiles, but the shared library doesn't build yet).
+
 1.0.2:
 	- Fixed Windows 2000 entropy bug; instead of using the first waveIn device, entropy now uses WAVE_MAPPER.
 	- Added sparcv9 mp32addsqrtrc GNU assembler routine.
-	- Added more hashFunctionContext and keyedHashFunctionContext functions
+	- Added more hashFunctionContext and keyedHashFunctionContext functions.
 
 1.0.1:
 	- Added a sliding window modular exponentiation, about 30% faster than left-to-right exponentiation.
